# jarvis

./: .gitignore  build.py  main.spec  pyproject.toml
src/jarvis/: llm.py  main.py  memory.py  processor.py  prompt.txt  transcription.py  wake.py
